@@ -19,6 +19,9 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
  * $Log$
+ * Revision 1.10  2008-05-19 09:14:00  tino
+ * tino_alloc naming convention
+ *
  * Revision 1.9  2008-01-03 00:09:38  tino
  * fixes for C++
  *
@@ -65,16 +68,16 @@ tino_str_vprintf_null(TINO_VA_LIST list)
       char	*tmp;
       int	k;
 
-      tmp	= (char *)tino_malloc_null(n);
+      tmp	= (char *)tino_mallocN(n);
       if (!tmp)
 	return 0;
 
       k	= tino_vsnprintf(tmp, n, list);
       tino_FATAL(k<0);
       if (++k<=n)
-	return (char *)tino_realloc_downsize(tmp, k);
+	return (char *)tino_realloc_downsizeO(tmp, k);
 
-      tino_free(tmp);
+      tino_freeO(tmp);
       /* There is a bug in older libraries.
        * vsnprintf does not return the size needed,
        * instead it returns max.
